welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:1: error: type lightGray is not a member of object java.awt.Color
setCouleurBrosse(c:Color.lightGray)
                         ^PictureMono1:1: error: not found: value c
setCouleurBrosse(c:Color.lightGray)
                 ^